# cuda-multigrid

./: CMakeLists.txt  Makefile  README.md  definitions.cuh  gauss_seidel.cu  gauss_seidel.cuh  gauss_seidel.hpp  mms.hpp  norm.cuh  norm.hpp  print.hpp  residual.cuh  residual.hpp  solver.hpp
src/: assertions.hpp  definitions.cuh  grid.cuh  grid.hpp  poisson.cuh  poisson.hpp  solver.hpp
test/: CMakeLists.txt  test_grid.cu  test_poisson.cu
